package loja.categoria;

public class Categoria {

}
