package loja.compra;

public class CompraId {

}
